<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="iron_title">Iron</string>
    <string name="ironos_title">IronOS Settings</string>
    <string name="navigation_actions_title">Actions</string>
    <string name="navigation_interface_title">Interface</string>
    <string name="navigation_statusbar_title">Statusbar</string>
    <string name="navigation_lockscreen_title">Lockscreen</string>
    <string name="navigation_system_title">System/Misc</string>
    <string name="accessibility_description">Screen menu</string>
    <string name="accessibility_item_description">%1$s menu item</string>
    <string name="powerbutton_title">Power button</string>
    <string name="powerbutton_summary">Configure additional options &amp; actions</string>
    <string name="navigationbar_title">Navigation</string>
    <string name="navigationbar_summary">Configure system navigation options</string>
    <string name="gesture_options_title">Gestures</string>
    <string name="gesture_options_summary">Enable/disable device specific user actions</string>
    <string name="volume_rocker_title">Volume rocker</string>
    <string name="volume_rocker_summary">Set default behavior and actions for vol +/- keys</string>
    <string name="hw_keys_title">Hardware keys</string>
    <string name="hw_keys_summary">Assign actions for physical navigation buttons</string>
    <string name="quick_settings_title">Quick settings</string>
    <string name="quick_settings_summary">Customize the overall view &amp; functionality</string>
    <string name="headsup_title">Heads-up</string>
    <string name="headsup_summary">Configure Heads-up options</string>
    <string name="recents_title">Recents</string>
    <string name="recents_summary">Configure look &amp; feel of recent apps view</string>
    <string name="themer_title">Themer</string>
    <string name="themer_summary">Browse and select installed themes</string>
    <string name="battery_options_title">Battery options</string>
    <string name="battery_options_summary">Customize how battery is displayed</string>
    <string name="clock_options_title">Clock options</string>
    <string name="clock_options_summary">Set view options of time &amp; date in statusbar</string>
    <string name="traffic_title">Network indicator</string>
    <string name="traffic_summary">Enable &amp; configure network indicator in statusbar</string>
    <string name="status_bar_items_title">Statusbar items</string>
    <string name="status_bar_items_summary">Configure statusbar indicators</string>
    <string name="lockscreen_aosp_title">Native controls</string>
    <string name="lockscreen_aosp_summary">Configure AOSP options for lockscreen &amp; ambient display</string>
    <string name="lockscreen_general_title">General options</string>
    <string name="lockscreen_general_summary">Add or remove visual elements of your lockscreen</string>
    <string name="lockscreen_tuner_title">Lockscreen tuner</string>
    <string name="lockscreen_tuner_summary">Add or remove tuner parts of your lockscreen</string>
    <string name="lockscreen_weather_title2">Weather options</string>
    <string name="lockscreen_weather_summary2">Configure lockscreen weather</string>
    <string name="animations_category_title">Animations</string>
    <string name="animations_category_summary">Set custom animations for certain transitions</string>
    <string name="general_notifications_title">General notifications</string>
    <string name="general_notifications_summary">Miscellaneous notification controls</string>
    <string name="miscellaneous_title">Miscellaneous</string>
    <string name="miscellaneous_summary">Uncategorized options</string>
    <string name="changelog_title">Changelog</string>
    <string name="changelog_summary">List of recent commits added to IronOS</string>
    <string name="led_settings_title">LED settings</string>
    <string name="led_settings_summary">Configure the LED light for supported options</string>
    <string name="empty_category_title">No extra features yet...</string>
    <string name="empty_category_description">However, new features may be added here soon. Check back after future updates!</string>
    <string name="dummy_string"> </string>
    <string name="active_edge_title">Active Edge</string>
    <string name="ambient_music_display">Music ticker</string>
    <string name="aware_settings_title">Motion Sense</string>
    <string name="battery_style_statusbar">Statusbar battery</string>
    <string name="battery_style_qs">Quick panel battery</string>
    <string name="brightness_control_category">Brightness control</string>
    <string name="custom_header_title">Custom header</string>
    <string name="led_notifications_title">LED notifications</string>
    <string name="led_battery_title">Battery LED</string>
    <string name="lockscreen_visualizer_enable">Music Visualizer</string>
    <string name="qs_panel_layout_category">QS panel layout</string>
    <string name="smart_pixels_title">Smart Pixels</string>
    <string name="volume_steps_title">Volume steps</string>
    <string name="power_menu_category">Power menu</string>
    <string name="pulse_settings">Pulse</string>
    <string name="ironos_about_title">About IronLOS</string>
    <string name="ironos_about_summary">A little info about the IronLOS</string>
    <string name="ironos_telegram_title">IronLOS Community</string>
    <string name="ironos_telegram_summary"><a href="https://t.me/s/ralf979">Join into the doghouse here</a></string>
    <string name="ironos_github_title">IronLOS Github</string>
    <string name="ironos_github_summary"><a href="https://www.github.com/ralf979">See the IronOS source code here!</a></string>
    <string name="ironos_about_info_summary">IronLOS is a stuffed LineageOS</string>
    <string name="ironos_about_team">IronLOS team</string>
    <string name="ironos_about_ralf979" translatable="false">Ralf979</string>
    <string name="ironos_about_ralf979_summary" translatable="false">Macte Animo</string>
    <string name="about_maintainer">Maintainer</string>
    <string name="ironos_about_maintainer">My friends and helpers</string>
    <string name="ironos_about_maintainer_summary" translatable="false">Andrea UZ (proud husband, father, bassist and android lover) and Alex Il Leone (the shy)</string>
    <string name="ironos_version">IronLOS version</string>
    <string name="ironos_version_default">Unknown</string>
    <string name="advanced_behavior_title">Advanced behavior</string>
    <string name="appearance_category">APPEARANCE</string>
    <string name="behavior_category">BEHAVIOR</string>
    <string name="enable_first">Please enable first</string>
    <string name="ok_string">Ok</string>
    <string name="unsupported_gestures">Enable two button or three button navigation to use this feature</string>
    <string name="systemui_restart_title">SystemUI restart required</string>
    <string name="systemui_restart_message">For all changes to take effect, a SystemUI restart is required. Restart SystemUI now?</string>
    <string name="navigation_tuner_title">Navigation Tuner</string>
    <string name="navbar_gestures_title">Navigation gesture options</string>
    <string name="navbar_gestures_summary">Choose buttons or gestures to navigate your device</string>
    <string name="navigation_bar_invert_layout_title">Invert layout</string>
    <string name="navigation_bar_invert_layout_summary">Inverts the layout of the navigation bar and other items, such as the IME switcher</string>
    <string name="gesture_invert_layout_summary">Inverts the layout of the IME switcher</string>
    <string name="qs_columns_rows_category_title">QS columns and rows</string>
    <string name="qs_rows_columns_title">QS rows and columns</string>
    <string name="qs_rows_portrait_title">Tiles rows on portrait</string>
    <string name="qs_rows_landscape_title">Tiles rows on landscape</string>
    <string name="qs_columns_portrait_title">Tiles columns on portrait</string>
    <string name="qs_columns_landscape_title">Tiles columns on landscape</string>
    <string name="system_animation_title">System</string>
    <string name="activity_open_title">Activity open animation</string>
    <string name="activity_close_title">Activity close animation</string>
    <string name="task_open_title">Task open animation</string>
    <string name="task_open_behind_title">Task open behind animation</string>
    <string name="task_close_title">Task close animation</string>
    <string name="task_move_to_front_title">Move to front animation</string>
    <string name="task_move_to_back_title">Move to back animation</string>
    <string name="wallpaper_open_title">Wallpaper open animation</string>
    <string name="wallpaper_close_title">Wallpaper close animation</string>
    <string name="wallpaper_intra_open_title">Wallpaper intra open animation</string>
    <string name="wallpaper_intra_close_title">Wallpaper intra close animation</string>
    <string name="animation_duration_title">Animation duration</string>
    <string name="title_animation_no_override">Prevent app overrides</string>
    <string name="summary_animation_no_override">Prevent apps from overriding transitions</string>
    <string name="animation_duration_default">Default</string>
    <string name="default_string">Default</string>
    <string name="qs_tile_animation_category">QS tile</string>
    <string name="qs_tile_animation_style_title">QS tile animation</string>
    <string name="qs_tile_animation_duration_title">QS tile animation duration</string>
    <string name="qs_tile_animation_style_off">Disabled</string>
    <string name="qs_tile_animation_style_flip">Flip</string>
    <string name="qs_tile_animation_style_rotate">Rotate</string>
    <string name="qs_tile_animation_duration_low">Low</string>
    <string name="qs_tile_animation_duration_default">Default</string>
    <string name="qs_tile_animation_duration_fast">Fast</string>
    <string name="qs_tile_animation_interpolator_title">QS tile animation interpolator</string>
    <string name="qs_tile_animation_interpolator_linearInterpolator">Linear</string>
    <string name="doze_brightness_category">Doze Brightness Config</string>
    <string name="ambient_pulse_brightness_title">Ambient notification brightness</string>
    <string name="ambient_pulse_brightness_summary">Set brightness to use when notifcations are shown</string>
    <string name="ambient_doze_brightness_title">Ambient display brightness</string>
    <string name="ambient_doze_brightness_summary">Set brightness to use during ambient display on</string>
    <string name="weather_settings_general_settings_title">General</string>
    <string name="weather_settings_providers_title">Providers</string>
    <string name="weather_settings_temp_units_title">Temperature unit</string>
    <string name="weather_title">Weather settings</string>
    <string name="weather_summary">OmniJaws weather configs</string>
    <string name="lockscreen_weather_title">Show weather condition</string>
    <string name="lockscreen_weather_summary">Show current weather condition and temperature</string>
    <string name="lockscreen_weather_show_city_title">Show city name</string>
    <string name="lockscreen_weather_show_city_summary">Show name of current city on left of image</string>
    <string name="lockscreen_weather_show_temp_title">Show temperature</string>
    <string name="lockscreen_weather_show_temp_summary">Show current city temperature on right of image</string>
    <string name="lockscreen_weather_style_title">Weather style</string>
    <string name="lock_screen_weather_style_summary">Instead of using the big widget, it\'ll show next to the date</string>
    <string name="fod_recog_animation">Fingerprint animation</string>
    <string name="fod_recog_animation_summary">Shows an animation while reading your finger</string>
</resources>