<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2020 IronOS

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/lockscreen_weather_title2" >

    <com.iron.support.preferences.SystemSettingSwitchPreference
        android:key="lockscreen_weather_enabled"
        android:title="@string/lockscreen_weather_title"
        android:summary="@string/lockscreen_weather_summary"
        android:defaultValue="true" />

    <com.iron.support.preferences.SystemSettingListPreference
        android:key="lockscreen_weather_style"
        android:title="@string/lockscreen_weather_style_title"
        android:dialogTitle="@string/lockscreen_weather_style_title"
        android:entries="@array/lockscreen_weather_style_entries"
        android:entryValues="@array/lockscreen_weather_style_values"
        android:defaultValue="0"
        android:dependency="lockscreen_weather_enabled"
        android:summary="@string/lock_screen_weather_style_summary" />

    <com.iron.support.preferences.SystemSettingSwitchPreference
        android:key="lockscreen_weather_show_city"
        android:title="@string/lockscreen_weather_show_city_title"
        android:summary="@string/lockscreen_weather_show_city_summary"
        android:dependency="lockscreen_weather_enabled"
        android:defaultValue="false" />

    <com.iron.support.preferences.SystemSettingSwitchPreference
        android:key="lockscreen_weather_show_temp"
        android:title="@string/lockscreen_weather_show_temp_title"
        android:summary="@string/lockscreen_weather_show_temp_summary"
        android:dependency="lockscreen_weather_enabled"
        android:defaultValue="true" />

    <Preference
        android:key="omnijaws_settings"
        android:title="@string/weather_title"
        android:summary="@string/weather_summary"
        android:dependency="lockscreen_weather_enabled"
        android:fragment="com.boxer.Iron.external.OmniJawsSettings" />

    <PreferenceCategory
            android:key="weather_general_settings"
            android:title="@string/weather_settings_general_settings_title"
            android:order="0">
        <ListPreference
                android:key="weather_temperature_unit"
                android:entries="@array/weather_temp_unit_entries"
                android:entryValues="@array/weather_temp_unit_values"
                android:title="@string/weather_settings_temp_units_title"
                android:summary="%s"
                android:persistent="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="weather_service_providers"
        android:title="@string/weather_settings_providers_title"
        android:order="1">

    </PreferenceCategory>
</PreferenceScreen>
