<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2020 IronOS

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/lockscreen_general_title" >
        <PreferenceCategory
        android:title="@string/doze_brightness_category" >
        <com.iron.support.preferences.CustomSeekBarPreference
            android:key="ambient_doze_brightness"
            android:title="@string/ambient_doze_brightness_title"
            android:summary="@string/ambient_doze_brightness_summary"
            android:max="255"
            settings:min="1"
            android:persistent="false" />

        <com.iron.support.preferences.CustomSeekBarPreference
            android:key="ambient_pulse_brightness"
            android:title="@string/ambient_pulse_brightness_title"
            android:summary="@string/ambient_pulse_brightness_summary"
            android:max="255"
            settings:min="1"
            android:persistent="false" />
    </PreferenceCategory>

    <com.iron.support.preferences.SystemSettingSwitchPreference
        android:key="fod_recognizing_animation"
        android:title="@string/fod_recog_animation"
        android:summary="@string/fod_recog_animation_summary"
        android:defaultValue="false" />
</PreferenceScreen>
